docs/0.14/_sources/api/gammapy.modeling.models.DiskSpatialModel.rst.txt
DiskSpatialModel
================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: DiskSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DiskSpatialModel.e
      ~DiskSpatialModel.evaluation_radius
      ~DiskSpatialModel.frame
      ~DiskSpatialModel.lat_0
      ~DiskSpatialModel.lon_0
      ~DiskSpatialModel.parameters
      ~DiskSpatialModel.phi
      ~DiskSpatialModel.position
      ~DiskSpatialModel.r_0
      ~DiskSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~DiskSpatialModel.__call__
      ~DiskSpatialModel.copy
      ~DiskSpatialModel.create
      ~DiskSpatialModel.evaluate
      ~DiskSpatialModel.evaluate_geom
      ~DiskSpatialModel.from_dict
      ~DiskSpatialModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: e
   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi
   .. autoattribute:: position
   .. autoattribute:: r_0
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: to_dict
