docs/0.16/_sources/api/gammapy.modeling.models.DiskSpatialModel.rst.txt
DiskSpatialModel
================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: DiskSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DiskSpatialModel.default_parameters
      ~DiskSpatialModel.e
      ~DiskSpatialModel.edge
      ~DiskSpatialModel.evaluation_radius
      ~DiskSpatialModel.lat_0
      ~DiskSpatialModel.lon_0
      ~DiskSpatialModel.parameters
      ~DiskSpatialModel.phi
      ~DiskSpatialModel.phi_0
      ~DiskSpatialModel.position
      ~DiskSpatialModel.position_error
      ~DiskSpatialModel.r_0
      ~DiskSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~DiskSpatialModel.__call__
      ~DiskSpatialModel.copy
      ~DiskSpatialModel.create
      ~DiskSpatialModel.evaluate
      ~DiskSpatialModel.evaluate_geom
      ~DiskSpatialModel.from_dict
      ~DiskSpatialModel.plot
      ~DiskSpatialModel.to_dict
      ~DiskSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_parameters
   .. autoattribute:: e
   .. autoattribute:: edge
   .. autoattribute:: evaluation_radius
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: r_0
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: plot
   .. automethod:: to_dict
   .. automethod:: to_region
